fixed overflowing issues on news page

--- a/c-sharks/style/media-queries.css
+++ b/c-sharks/style/media-queries.css
@@ -16,7 +16,7 @@
   }
 
   .title-section p {
-    font-size: 20px !important;
+    font-size: 24px !important;
     line-height: 1.5;
   }
 
@@ -35,7 +35,7 @@
   }
 
   .content-holder p {
-    font-size: 32px !important;
+    font-size: 24px !important;
   }
 
   .content-container .content-image {
